--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
         </div>
     </div>
 
+    <div class="display-mobile flex-row raleway margin-top">
+        <div class="heber-mobile"><a class="hebergement" href="#hebergement">Hebergements</a>
+            </div>
+        <div class="acti-mobile"><a class="hebergement" href="#activite">Activite</a></div>
+    </div>
+
+
     <div class="trouver-heber margin-left">
         <div class="mid-text raleway">
             <p class="bold margin-top-p">Trouvez votre hébergement pour des vacances de rêve</p>
@@ -82,7 +89,7 @@
                     <p class="heber-txt stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i
                             class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p>
                 </div>
-                <div class="carre-01 margin-top-media">
+                <div id="box-mouettes" class="carre-01 margin-top-media">
                     <img class="img-content" src="./images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg"
                         alt="">
                     <p class="bold heber-txt">Hôtel les mouettes</p>
