--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 
     <div class="trouver-heber margin-left">
         <div class="mid-text raleway">
-            <p class="bold margin-top-p">Trouvez votre hébergement pour des vacances de rêve</p>
-            <p class="margin-top-p">En plein centre ville ou pleine nature</p>
+            <h1 class="bold margin-top-p">Trouvez votre hébergement pour des vacances de rêve</h1>
+            <h2 class="margin-top-p">En plein centre ville ou pleine nature</h2>
         </div>
         <div class="recherche flex-row">
             <div class="rech flex-row">
