correction bug ombre

--- a/index.html
+++ b/index.html
@@ -186,11 +186,11 @@
             </div>
             <div class="column-duo margin-top-media">
                 <div class="inside-column">
-                    <div class="img-duo box-fort border-radius-top"></div>
+                    <div class="box-fort border-radius-top"></div>
                     <div class="txt">Fort de Pomègues</div>
                 </div>
                 <div class="inside-column margin-top-box">
-                    <div class="img-duo box-iles border-radius-top"></div>
+                    <div class="box-iles border-radius-top"></div>
                     <div class="txt">Iles du Frioul</div>
                 </div>
             </div>
@@ -200,11 +200,11 @@
             </div>
             <div class="column-duo margin-top-media">
                 <div class="inside-column">
-                    <div class="img-duo box-dame border-radius-top"></div>
+                    <div class="box-dame border-radius-top"></div>
                     <div class="txt">Notre-Dame-de-la-Garde</div>
                 </div>
                 <div class="inside-column margin-top-box">
-                    <div class="img-duo box-long border-radius-top"></div>
+                    <div class="box-long border-radius-top"></div>
                     <div class="txt">Parc Longchamp</div>
                 </div>
             </div>
