--- a/index.html
+++ b/index.html
@@ -42,24 +42,24 @@
     </div>
     </div>
 
-    <div class="raleway test1 margin-left justify-space-between">
-        <p class="test2 bold">Filtres</p>
-        <div class="flex-row test7">
-                <div class="test4 flex-row">
-                    <div class="test5"><i class="fas fa-money-bill-wave"></i></div>
-                    <p class="test3 bold">Economique</p>
+    <div class="raleway filtres margin-left justify-space-between">
+        <p class="box-filtres bold">Filtres</p>
+        <div class="flex-row width-filtre">
+                <div class="indiv-filtre flex-row">
+                    <div class="small-filtre-icon"><i class="fas fa-money-bill-wave"></i></div>
+                    <p class="text-filtre bold">Economique</p>
                 </div>
-            <div class="test4 flex-row">
-                <div class="test6"><i class="fas fa-male"></i></div>
-                <p class="test3 bold">Familial</p>
+            <div class="indiv-filtre flex-row">
+                <div class="wide-filtre-icon"><i class="fas fa-male"></i></div>
+                <p class="text-filtre bold">Familial</p>
             </div>
-            <div class="test4 flex-row">
-                <div class="test5"><i class="fas fa-heart"></i></div>
-                <p class="test3 bold">Romantique </p>
+            <div class="indiv-filtre flex-row">
+                <div class="small-filtre-icon"><i class="fas fa-heart"></i></div>
+                <p class="text-filtre bold">Romantique </p>
             </div>
-            <div class="test4 flex-row">
-                <div class="test5"><i class="fas fa-dog"></i></div>
-                <p class="test3 bold">Animaux Autorisés</p>
+            <div class="indiv-filtre flex-row">
+                <div class="small-filtre-icon"><i class="fas fa-dog"></i></div>
+                <p class="text-filtre bold">Animaux Autorisés</p>
             </div>
         </div>
     </div>
