fix bug responsive

--- a/index.html
+++ b/index.html
@@ -128,9 +128,9 @@
             <p class="bold">Afficher plus</p>
         </div>
         <div class="bloc-populaire raleway margin-top-media">
-            <div class="flex-row test9">
+            <div class="flex-row popu-general">
                 <p class="bold">Les plus populaires</p>
-                <i class="fas fa-chart-line test9"></i>
+                <i class="fas fa-chart-line popu-general"></i>
             </div>
             <div class="popu-box justify-space-between flex-column">
                 <div class="carre-02">
@@ -212,7 +212,6 @@
     </div>
 
     </div>
-    <!-- Mettre liens avec # pour tous les liens -->
     <footer class="footer raleway margin-top">
         <div class="columns margin-left">
             <div class="link-box">
