--- a/index.html
+++ b/index.html
@@ -10,26 +10,23 @@
 </head>
 
 <body>
-    <header class="header flex-row margin-left">
+    <header class="header">
         <div class="logo">
             <img class="logo-img" src="./images/logo/Reservia@3x.png" alt="logo">
         </div>
         <div class="liens flex-row raleway">
-            <a href="#hebergement" class="hebergement hover hide-media">Hébergements</a>
-            <a href="#activite" class="hebergement hover hide-media">Activités</a>
-            <p class="inscription hover">S'inscrire</p>
+            <div class="box-liens">
+                <a href="#hebergement" id="hebergement-header" class="hebergement hover">Hébergements</a>
+                <a href="#activite" id="activite-header" class="hebergement hover">Activités</a>
+            </div>
+            <div class="box-inscription">
+                <p class="inscription hover">S'inscrire</p>
+            </div>
         </div>
     </header>
 
     <section>
-        <div class="display-mobile flex-row raleway margin-top">
-            <div class="heber-mobile"><a class="hebergement" href="#hebergement">Hebergements</a>
-            </div>
-            <div class="acti-mobile"><a class="hebergement" href="#activite">Activite</a></div>
-        </div>
-
-
-        <div class="trouver-heber margin-left">
+                <div class="trouver-heber margin-left">
             <div class="mid-text raleway">
                 <h1 class="bold margin-top-p">Trouvez votre hébergement pour des vacances de rêve</h1>
                 <h2 class="margin-top-p">En plein centre ville ou pleine nature</h2>
